@@ -91,7 +91,7 @@ OP_CompletedTasks=0x3141			#
 OP_Weather=0x3e50					# 
 OP_SendAATable=0x6a7e				# 
 OP_UpdateAA=0x5363					# Testing VoA 0x5363
-OP_RespondAA=0x7bf6					# Testing VoA 0x0643
+OP_RespondAA=0x11ae					# Testing VoA 0x7bf6
 OP_ReqClientSpawn=0x2c27			# 
 OP_SpawnDoor=0x7113					# 
 OP_GroundSpawn=0x33e5				# 
